fix x overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 html,
 body {
   scroll-behavior: smooth;
-
+  overflow-x: hidden;
   overflow-x: hidden;
   height: 100%;
 }
@@ -514,8 +514,16 @@ h4.contact_detail {
 }
 
 @media (max-width: 700px) {
+  .Education .hidden,
+  .Experience .hidden {
+    display: none;
+  }
+  .Skills .grid_header,
+  .Contact .grid_header {
+    width: 60%;
+  }
   .Skills {
-    height: 120vh;
+    height: 150vh;
 
     .grid_header {
       grid-template-areas:
@@ -542,13 +550,13 @@ h4.contact_detail {
   }
 }
 
-.container {
-  overflow: scroll;
-  height: 100vh;
-  scroll-snap-type: y proximity;
-}
+// .container {
+//   overflow: scroll;
+//   height: 100vh;
+//   scroll-snap-type: y proximity;
+// }
 
-.child {
-  scroll-snap-align: end;
-  position: relative;
-}
+// .child {
+//   scroll-snap-align: end;
+//   position: relative;
+// }
